deploy/istio_canary/12.userlist-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userlist-v2
  labels:
    app: simple02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple02
      version: v2
  template:
    metadata:
      labels:
        app: simple02
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: userlist
        image: ssongman/userlist:v1
        ports:
        - containerPort: 8181
