deploy/istio_canary/170.userlist-vsvc-ratio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: userlist-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "userlist.ipc.kt.com"
    #- "userlist.ipc.kt.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userlist
spec:
  hosts:
  - "userlist.ipc.kt.com"
  gateways:
  - userlist-gateway
  http:
  - route:
    - destination:
        host: simple02-svc
        subset: v1
      weight: 100
    - destination:
        host: simple02-svc
        subset: v2
      weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: userlist
spec:
  host: simple02-svc
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    loadBalancer:
      consistentHash:
        useSourceIp: false          # true: sticky session ,  false: LB
---
