deploy/istio_canary/19.userlist-route.yaml
apiVersion: route.openshift.io/v1
#apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'

    ##### sticky session
    # haproxy.router.openshift.io/balance: sticky
    # haproxy.router.openshift.io/disable_cookies: 'false'

    ##### roundrobin session
    #haproxy.router.openshift.io/balance: roundrobin
    #haproxy.router.openshift.io/disable_cookies: 'true'
  labels:
  name: userlist-route
  # namespace: istio-system
spec:
  host: userlist.ipc.kt.com
  port:
    targetPort: http2
  to:
    kind: Service
    name: istio-ingressgateway
    #name: userlist-svc.dev-song.svc.cluster.local
    #name: userlist-svc
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
      host: userlist.ipc.kt.com
      routerName: router
      wildcardPolicy: None
